change progress-spinner to loading-spinner , add pagination to viewSettingsObj

--- a/projects/crud/src/lib/components/form-field/form-field.component.html
+++ b/projects/crud/src/lib/components/form-field/form-field.component.html
@@ -1,4 +1,4 @@
-<ng-container [ngSwitch]="config.type" [formGroup]="formGroup">
+<ng-container [ngSwitch]="config?.type" [formGroup]="formGroup">
 
     <ng-container *ngSwitchCase="'boolean'">
         <div class="checkbox-container">
@@ -15,8 +15,8 @@
     </ng-container>
 
     <mat-form-field *ngSwitchCase="'date'">
-        <mat-label>{{ config.label }}</mat-label>
-        <input matInput [formControlName]="config.name" [matDatepicker]="myDatepicker" />
+        <mat-label>{{ config?.label }}</mat-label>
+        <input matInput [formControlName]="config?.name" [matDatepicker]="myDatepicker" />
         <mat-error *ngIf="f[config.name].hasError('required') && (f[config.name].dirty || f[config.name].touched)">
             this field is required</mat-error>
         <mat-datepicker-toggle matSuffix [for]="myDatepicker" style="color: #1490C0"></mat-datepicker-toggle>
@@ -48,8 +48,8 @@
 
     <!-- this fallsback from number and text -->
     <mat-form-field *ngSwitchDefault>
-        <mat-label>{{ config.label }}</mat-label>
-        <input matInput [formControlName]="config.name" [required]="f[config.name].hasError('required')" [type]="config.control ? config.control.type : 'text'" />
+        <mat-label>{{ config?.label }}</mat-label>
+        <input matInput [formControlName]="config?.name" [required]="f[config?.name].hasError('required')" [type]="config?.control ? config?.control.type : 'text'" />
         <mat-error *ngIf="f[config.name].hasError('required') && (f[config.name].dirty || f[config.name].touched)">
             this field is required</mat-error>
         <mat-error *ngIf="f[config.name].hasError('maxlength') && (f[config.name].dirty || f[config.name].touched)">
