--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="!iframeOpened">
-    <div class="row" *ngIf="!viewConfig.dialog_mode">
+    <div [ngStyle]="{'display': (initialLoading)?'none':'block'}" class="row" *ngIf="!viewConfig.dialog_mode">
         <ng-container *ngIf="viewConfig?.external_link?.link;else normal">
             <a class="crud-new-btn" mat-raised-button (click)="redirect()" color="primary">
                 <mat-icon>add</mat-icon> Add New
@@ -25,7 +25,7 @@
     </h2>
 
     <ng-template [ngIf]="viewConfig.search.enabled">
-        <mat-expansion-panel [expanded]="true" class="crud-search">
+        <mat-expansion-panel [ngStyle]="{'display': (initialLoading)?'none':'block'}" [expanded]="true" class="crud-search">
             <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
                 <mat-panel-title>
                     <mat-icon>search</mat-icon>
@@ -37,7 +37,19 @@
         </mat-expansion-panel>
     </ng-template>
 
-    <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar>
+
+    <div class="fo-spinner-main-container" *ngIf="isLoading">
+        <div class="fo-spinner-overlay"></div>
+        <div class="fo-spinner-container">
+            <mat-spinner class="fo-spinner"></mat-spinner>
+        </div>
+    </div>
+
+    <div class="grid-spinner" *ngIf="initialLoading">
+        <mat-spinner></mat-spinner>
+    </div>
+
+    <!-- <mat-progress-bar *ngIf="isLoading" mode="query"></mat-progress-bar> -->
     <div class="bulk_container">
         <button mat-raised-button class="bulk_btn" [matMenuTriggerFor]="menu" *ngIf="selection.selected.length>0 &&
             viewConfig.metadata.bulkActions?.length>0">Bulk Actions
@@ -49,7 +61,7 @@
             </ng-container>
         </mat-menu>
     </div>
-    <mat-table [dataSource]="dataSource" class="crud-table">
+    <mat-table [dataSource]="dataSource" class="crud-table" [ngStyle]="{'display': (initialLoading)?'none':'block'}">
         <ng-container *ngFor="let column of columns" [matColumnDef]="column.columnDef">
             <ng-template [ngIf]="column.columnDef === 'checked'">
                 <ng-container matColumnDef="select">
@@ -115,7 +127,7 @@
         <mat-header-row *matHeaderRowDef="displayColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayColumns;" [ngClass]="{'clickable': mode === 'pick'}" (click)="_picked(row)"></mat-row>
     </mat-table>
-    <mat-paginator class="crud-paginator" #paginator *ngIf="viewConfig.pagination.enabled" [length]="resultsCount" [pageIndex]="pages-1" [pageSize]="20" (page)="onChange($event)">
+    <mat-paginator [ngStyle]="{'display': (initialLoading)?'none':'block'}" class="crud-paginator" #paginator *ngIf="viewConfig.pagination.enabled" [length]="resultsCount" [pageIndex]="pages-1" [pageSize]="20" (page)="onChange($event)">
     </mat-paginator>
 </ng-container>
 
