--- a/projects/crud/src/lib/components/model-form/model-form.component.scss
+++ b/projects/crud/src/lib/components/model-form/model-form.component.scss
@@ -14,7 +14,7 @@
 
 .reset_btn {
     padding: 0 10px;
-    margin: 0;
+    margin-left: -20px;
     width: 100%;
     display: flex;
     flex-direction: column;
