--- a/projects/crud/src/lib/components/date-time-picker/date-time-picker.component.html
+++ b/projects/crud/src/lib/components/date-time-picker/date-time-picker.component.html
@@ -1,5 +1,5 @@
 <mat-form-field [formGroup]="formGroup">
     <mat-label>{{config.label}}</mat-label>
-    <input matInput [formControl]="selectedMoment" [owlDateTimeTrigger]="dtPicker" [owlDateTime]="dtPicker">
+    <input id="{{config?.name}}-field" matInput [formControl]="selectedMoment" [owlDateTimeTrigger]="dtPicker" [owlDateTime]="dtPicker">
     <owl-date-time #dtPicker></owl-date-time>
 </mat-form-field>
