--- a/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
+++ b/projects/crud/src/lib/components/foreign-key-field/foreign-key-field.component.html
@@ -5,7 +5,7 @@
         cursor: pointer;
         position: absolute;
         right: 0px;" *ngIf="config?.isSearchable" (click)="openListingDialog($event)">search</mat-icon>
-        <input type="text" matInput [required]="formGroup.controls[config.name].hasError('required')" [formControl]="_underlyingCtrl" [matAutocomplete]="auto">
+        <input type="text" matInput id="{{config?.name}}-field" [required]="formGroup.controls[config.name].hasError('required')" [formControl]="_underlyingCtrl" [matAutocomplete]="auto">
         <mat-error *ngIf="formGroup.controls[config.name].hasError('required') && (formGroup.controls[config.name].dirty || formGroup.controls[config.name].touched)">
             this field is required</mat-error>
     </mat-form-field>
