--- a/projects/crud/src/lib/components/listing/listing.component.html
+++ b/projects/crud/src/lib/components/listing/listing.component.html
@@ -6,7 +6,7 @@
             </a>
         </ng-container>
         <ng-template #normal>
-            <a class="crud-new-btn" mat-raised-button routerLink="new" color="primary">
+            <a class="crud-new-btn" mat-raised-button routerLink="add" color="primary">
                 <mat-icon>add</mat-icon> Create
             </a>
         </ng-template>
