add attachments component

--- a/projects/crud/src/lib/components/form-field/form-field.component.html
+++ b/projects/crud/src/lib/components/form-field/form-field.component.html
@@ -34,8 +34,8 @@
     </ng-container>
 
     <ng-container *ngSwitchCase="'file'">
-        <ng-crud-file-upload [config]="config" [formGroup]="formGroup">
-        </ng-crud-file-upload>
+        <ng-crud-attachments [config]="config" [formGroup]="formGroup">
+        </ng-crud-attachments>
     </ng-container>
 
     <ng-container *ngSwitchCase="'datetime'">
