--- a/projects/crud/src/lib/components/file-upload/file-upload.component.html
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.html
@@ -1,4 +1,4 @@
-<mat-form-field [formGroup]="formGroup">
-    <mat-label class="fileContainer">{{ config.label }}</mat-label>
-    <input type="file" id="{{config?.name}}-field" [formControlName]="config.name" />
-</mat-form-field>
+<label class="fileContainer">
+    Browse
+        <input type="file" id="file"/>
+    </label>
