--- a/projects/crud/src/lib/components/file-upload/file-upload.component.css
+++ b/projects/crud/src/lib/components/file-upload/file-upload.component.css
@@ -20,7 +20,8 @@
 /* Example stylistic flourishes */
 
 .fileContainer {
-    background: #E2E2E2;
+    background: #59BB61;
+    color: #fff;
     border-radius: 0;
     float: left;
     padding: 10px;
