fix postSubmit bugs

--- a/projects/crud/src/lib/components/model-form/model-form.component.html
+++ b/projects/crud/src/lib/components/model-form/model-form.component.html
@@ -1,4 +1,4 @@
-<div class="grid-spinner" *ngIf="initialLoading && mode==='edit'">
+<div class="grid-spinner" *ngIf="initialLoading;else page">
     <mat-spinner></mat-spinner>
 </div>
 <div *ngIf="mode==='search'" class="reset_btn">
@@ -7,85 +7,88 @@
     </a>
 </div>
 
-<div class="crud-form-body" [ngStyle]="{'display': (initialLoading && mode==='edit')?'none':''}">
-    <ng-template [ngIf]="is_ready">
-        <ng-error-handling></ng-error-handling>
-        <div class="header_btn_container" *ngIf="viewConfig?.metadata?.formActions && mode==='edit'">
-            <span class="header_btns">
-                <button mat-button class="header_btn" *ngFor="let link of viewConfig?.metadata?.formActions"
-                    (click)="onAction(link)">
-                    {{link.name}}
-                </button>
-            </span>
-        </div>
-
-
-        <div fxflexfill fxlayoutgap="10px grid" class="row full" [formGroup]="formGroup">
-            <ng-container *ngFor="let config of _visibleControls">
-                <ng-container *ngIf="config?.type === 'fieldset'">
-                    <div class="field-wrapper" [style.max-width.%]="config.cssWidth" [style.flex.%]="config.cssWidth" style="margin: 4px;">
-                        <mat-accordion>
+<ng-template #page>
+    <div class="crud-form-body" [ngStyle]="{'display': (initialLoading && mode==='edit')?'none':''}">
+        <ng-template [ngIf]="is_ready">
+            <ng-error-handling></ng-error-handling>
+            <div class="header_btn_container" *ngIf="viewConfig?.metadata?.formActions && mode==='edit'">
+                <span class="header_btns">
+                    <button mat-button class="header_btn" *ngFor="let link of viewConfig?.metadata?.formActions"
+                        (click)="onAction(link)">
+                        {{link.name}}
+                    </button>
+                </span>
+            </div>
+    
+    
+            <div fxflexfill fxlayoutgap="10px grid" class="row full" [formGroup]="formGroup">
+                <ng-container *ngFor="let config of _visibleControls">
+                    <ng-container *ngIf="config?.type === 'fieldset'">
+                        <div class="field-wrapper" [style.max-width.%]="config.cssWidth" [style.flex.%]="config.cssWidth" style="margin: 4px;">
+                            <mat-accordion>
+                                <mat-expansion-panel class="crud_expansion_panel" [expanded]="true">
+                                    <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
+                                        <mat-panel-title class="panel_title">
+                                            <mat-label>{{ config?.label }}</mat-label>
+                                        </mat-panel-title>
+                                    </mat-expansion-panel-header>
+                                    <ng-container *ngFor="let config2 of config?.control?.fields">
+                                        <div *ngIf="config2?.isEditable" style="width:47%;display:inline-block; box-sizing: border-box;" [style.width.%]="config2.cssWidth">
+                                            <ng-crud-form-field class="FormCell"  [style.flex.%]="config.cssWidth" [reset]="submit" [formGroup]="formGroup" [mode]="mode" [config]="config2" (elementDeleted)="elementDeleted($event)"></ng-crud-form-field>
+                                        </div>
+                                    </ng-container>
+                                </mat-expansion-panel>
+                            </mat-accordion>
+                        </div>
+                    </ng-container>
+                    <ng-container *ngIf="config.type !== 'fieldset' && config.type !== 'formset' && config.isEditable">
+                        <div *ngIf="mode==='edit' || mode==='create';else search" class="crud_edit_fields">
+                            <ng-crud-form-field class="FormCell" [mode]="mode" [reset]="submit" [formGroup]="formGroup" [config]="config" (elementDeleted)="elementDeleted($event)">
+                            </ng-crud-form-field>
+                        </div>
+                        <ng-template #search>
+                            <ng-crud-form-field class="FormCell" [mode]="mode" [reset]="submit" [formGroup]="formGroup" [config]="config" (elementDeleted)="elementDeleted($event)">
+                            </ng-crud-form-field>
+                        </ng-template>
+                    </ng-container>
+                    <ng-container *ngIf="config?.type === 'formset'">
+                        <mat-accordion style="width: 100%; margin: 10px;">
                             <mat-expansion-panel class="crud_expansion_panel" [expanded]="true">
                                 <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
                                     <mat-panel-title class="panel_title">
-                                        <mat-label>{{ config?.label }}</mat-label>
+                                        <mat-label>{{config.label}}</mat-label>
                                     </mat-panel-title>
                                 </mat-expansion-panel-header>
-                                <ng-container *ngFor="let config2 of config?.control?.fields">
-                                    <div *ngIf="config2?.isEditable" style="width:47%;display:inline-block; box-sizing: border-box;" [style.width.%]="config2.cssWidth">
-                                        <ng-crud-form-field class="FormCell"  [style.flex.%]="config.cssWidth" [reset]="submit" [formGroup]="formGroup" [mode]="mode" [config]="config2" (elementDeleted)="elementDeleted($event)"></ng-crud-form-field>
+                                <ng-container *ngFor="let config of formsets; let i=index">
+                                    <div class="formset_container">
+                                        <ng-crud-formset [config]="config" [mode]="mode" [formGroup]="formGroup"></ng-crud-formset>
                                     </div>
                                 </ng-container>
                             </mat-expansion-panel>
                         </mat-accordion>
-                    </div>
+                    </ng-container>
                 </ng-container>
-                <ng-container *ngIf="config.type !== 'fieldset' && config.type !== 'formset' && config.isEditable">
-                    <div *ngIf="mode==='edit' || mode==='create';else search" class="crud_edit_fields">
-                        <ng-crud-form-field class="FormCell" [mode]="mode" [reset]="submit" [formGroup]="formGroup" [config]="config" (elementDeleted)="elementDeleted($event)">
-                        </ng-crud-form-field>
-                    </div>
-                    <ng-template #search>
-                        <ng-crud-form-field class="FormCell" [mode]="mode" [reset]="submit" [formGroup]="formGroup" [config]="config" (elementDeleted)="elementDeleted($event)">
-                        </ng-crud-form-field>
-                    </ng-template>
+            </div>
+    
+            <div class="row actions">
+                <ng-container *ngIf="mode==='edit' || mode==='create';else search">
+                    <button mat-raised-button id="saveAndEdit-btn" class="submit-button saveAndEdit" [disabled]="disabled" (click)="_onSubmit('saveAndEdit')">
+                        Save and Edit
+                    </button>
+                    <button mat-raised-button id="saveAndAdd-btn" class="submit-button saveAndAdd" [disabled]="disabled" (click)="_onSubmit('saveAndAdd')">
+                        Save and Add
+                    </button>
+                    <button mat-raised-button id="save-btn" class="submit-button save" [disabled]="disabled" (click)="_onSubmit('save')">
+                        Save
+                    </button>
                 </ng-container>
-                <ng-container *ngIf="config?.type === 'formset'">
-                    <mat-accordion style="width: 100%; margin: 10px;">
-                        <mat-expansion-panel class="crud_expansion_panel" [expanded]="true">
-                            <mat-expansion-panel-header [collapsedHeight]="'40px'" [expandedHeight]="'40px'">
-                                <mat-panel-title class="panel_title">
-                                    <mat-label>{{config.label}}</mat-label>
-                                </mat-panel-title>
-                            </mat-expansion-panel-header>
-                            <ng-container *ngFor="let config of formsets; let i=index">
-                                <div class="formset_container">
-                                    <ng-crud-formset [config]="config" [mode]="mode" [formGroup]="formGroup"></ng-crud-formset>
-                                </div>
-                            </ng-container>
-                        </mat-expansion-panel>
-                    </mat-accordion>
-                </ng-container>
-            </ng-container>
-        </div>
+                <ng-template #search>
+                    <button mat-raised-button class="submit-button" (click)="_onSubmit()">
+                        Search
+                    </button>
+                </ng-template>
+            </div>
+        </ng-template>
+    </div>
+</ng-template>
 
-        <div class="row actions">
-            <ng-container *ngIf="mode==='edit' || mode==='create';else search">
-                <button mat-raised-button id="saveAndEdit-btn" class="submit-button saveAndEdit" [disabled]="disabled" (click)="_onSubmit('saveAndEdit')">
-                    Save and Edit
-                </button>
-                <button mat-raised-button id="saveAndAdd-btn" class="submit-button saveAndAdd" [disabled]="disabled" (click)="_onSubmit('saveAndAdd')">
-                    Save and Add
-                </button>
-                <button mat-raised-button id="save-btn" class="submit-button save" [disabled]="disabled" (click)="_onSubmit('save')">
-                    Save
-                </button>
-            </ng-container>
-            <ng-template #search>
-                <button mat-raised-button class="submit-button" (click)="_onSubmit()">
-                    Search
-                </button>
-            </ng-template>
-        </div>
-    </ng-template>
-</div>
