--- a/projects/crud/src/lib/components/attachments/attachments.component.html
+++ b/projects/crud/src/lib/components/attachments/attachments.component.html
@@ -37,17 +37,17 @@
 
         <tbody class="tableBody">
             <tr *ngFor="let file of attachments; let i=index;" class="border_bottom">
-                <td class="file-name">
+                <td class="file-name" id="{{ 'file-' + i }}">
                     {{!isUploaded(file)?file.name+'.'+file.extension:file.name}}
                 </td>
                 <td>
                     <button mat-icon-button (click)="deleteFile(file,i)">
-                  <mat-icon class="delete_icon">delete</mat-icon>
+                  <mat-icon class="delete_icon" id="{{'delete-btn-' + i}}">delete</mat-icon>
                 </button>
                 </td>
                 <td *ngIf="isUploaded(file)">
                     <a [href]="file.file" download="file.name" target="_blank" rel="noopener noreferrer">
-                        <mat-icon class="download_icon">cloud_download</mat-icon>
+                        <mat-icon class="download_icon" id="{{'download-btn-' + i}}">cloud_download</mat-icon>
                     </a>
                 </td>
             </tr>
